<resources>
    <string name="app_name">BookBuddy</string>
    <string name="title_home">My Collection</string>
    <string name="title_dashboard">Explore</string>
    <string name="title_notifications">Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Schedule</string>
    <string name="bookbuddy_logo">BookBuddy Logo</string>
    <string name="how_often_would_you_like_to_be_notified">How often would you like to be notified?</string>
    <string name="repeat">Repeat</string>
    <string name="hours">Hours</string>
    <string name="select_days">Select Days</string>
    <string name="select_hours">Select Hours</string>
    <string name="no_days_selected">No days selected</string>
    <string name="no_hours_selected">No hours selected</string>
    <string name="delete">Delete</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="selected_times">Selected Times: %1$s</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="everyday">Everyday</string>
    <string name="selected_days">Selected days: %1$s</string>
    <string name="none">None</string>
    <string name="delete_time">Delete Time</string>
    <string name="add_time">Add time</string>
    <string name="channel_name">Reading Reminder</string>
    <string name="channel_description">Channel for reading reminders</string>
    <string name="selected_hours">Selected Hours</string>


    <string-array name="status_array">
        <item>To Read</item>
        <item>Currently Reading</item>
        <item>Finished</item>
    </string-array>

    <string-array name="category_array">
        <!--<item>Fiction</item>
        <item>Non-Fiction</item>
        <item>Biography</item>
        <item>Science</item>
        <item>Fantasy</item> -->
        <item>Add New Category</item> <!-- Add this option -->
    </string-array>

    <string-array name="am_pm_values">
        <item>AM</item>
        <item>PM</item>
    </string-array>

</resources>