<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mobdeve.s12.fallarme.sophia.bookbuddy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mobdeve.s12.fallarme.sophia.bookbuddy.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <activity
        android:id="@+id/navigation_dashboard"
        android:name="com.mobdeve.s12.fallarme.sophia.bookbuddy.BookSearchActivity"
        android:label="@string/title_dashboard"
        tools:layout="@layout/activity_books">
        <argument
            android:name="account_id"
            app:argType="long" />

    </activity>





</navigation>